# Kaminari2D

./: .gitignore  CMakeLists.txt  main.cpp
Headers/: BoundingBoxComponent.h  Component.h  Components.h  Game.h  GameObject.h  GameState.h  PlayerControllerComponent.h  SpriteComponent.h  Util.h
Source/: Component.cpp  Game.cpp  GameObject.cpp  PlayerControllerComponent.cpp  SpriteComponent.cpp  Util.cpp
cmake/: FindSDL2_image.cmake
